# smart-news-backend

./: Cargo.toml  Dockerfile  mongo-bins-agg.txt
mongo-init/: import.sh
src/: app.rs  config.rs  main.rs
src/database/: mod.rs  mongo_client.rs
src/database/repositories/: article_prediction_repository.rs  article_repository.rs  deployment_repository.rs  metrics_repository.rs  mod.rs  predictors_repository.rs
src/database/repositories/models/: article_prediction_repository_models.rs  article_repository_models.rs  deployment_repository_models.rs  metrics_repository_models.rs  mod.rs  predictor_repository_models.rs
src/services/: article_service.rs  metrics_service.rs  mod.rs  predictor_service.rs
src/web/: handlers.rs  mod.rs  routes.rs
src/web/handlers/: articles_handlers.rs  health_handlers.rs  metrics_handlers.rs  mod.rs  predictor_handlers.rs
