[package]
name = "smart-news-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
http = "1.3.1"
log = "0.4.27"
mongodb = "3.2.3"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
